<resources>
    <string name="app_name">StudyMessenger</string>
    <string name="studymessnger">StudyMessenger</string>
    <string name="log_in">Log In</string>
    <string name="forgot_password">Forgot password</string>
    <string name="register">Register</string>
    <string name="registration">Registration</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="last_name">Last name</string>
    <string name="how_old_are_you">How old are you?</string>
    <string name="sing_up">Sing Up</string>
    <string name="forgot_password_2">Forgot Password?</string>
    <string name="your_email">Your email:</string>
    <string name="reset_password">RESET PASSWORD</string>
    <string name="logout">Logout</string>
    <string name="reset_message">The reset link is successfully sent</string>
    <string name="your_message">Your message...</string>
</resources>